lab1/Test/L1-A-13-69.output
Error Type A at Line 1
Error Type A at Line 4
Error Type B at Line 5
Error Type B at Line 13
Error Type B at Line 26
Error Type B at Line 48
